# forecasting-explaining-hotel-demand-in-eu

./: .gitattributes  .gitignore  README.docx  README.md  project_structure.txt  project_structure_short.txt  pyproject.toml
Literature/: OxCGRT_GitHub.txt  untourism.txt
data/data_reserve/: hotel_2025-11-01.csv
docs/: 01-data-exploration.html  01_data_exploration_preparation.html  02-feature-engineering.html  02_feature_engineering.html  03-model-training.html  03_model_estimation_comparison.html  03_model_estimation_comparison_clean.html  04-econometric-and-interpretability.html  04-model-evaluation.html  04_model_interpretability_economic_drivers.html  05_scenario_forecasting_policy_simulations.html  Research_plan.docx  corr_raw.csv  corr_spearman.csv  corr_within_country.csv  index.html
notebooks/: 01-data-exploration.ipynb  01_data_exploration_preparation.ipynb  02-feature-engineering.ipynb  02_feature_engineering.ipynb  02_feature_engineering_forecasting.ipynb  03-model-training.ipynb  03_model_estimation_comparison.ipynb  04-econometric-and-interpretability.ipynb  04-model-evaluation.ipynb  04-updated.ipynb  04_model_interpretability_economic_drivers.ipynb  04a-test-xgb-shap-debug.ipynb  05-reporting-and-visuals.ipynb  05-updated.ipynb  05_scenario_forecasting_policy_simulations.ipynb
src/hotel/: clean_panel.py  covid_cases_download.py  covid_download.py  eurostat_download copy.py  eurostat_download.py  exchange_rates_download.py  fx_rates_download.py  hotel_merge.py  (+3 more)
utils/: __init__.py  explainability.py  metrics.py  modeling.py  plots.py  scenarios.py
(+2 files in other folders)
