[project]
name = "hotel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.5"
dependencies = [
    "eurostat>=1.1.1",
    "ipykernel>=6.29.5",
    "kagglehub>=0.3.12",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "nbstripout>=0.8.1",
    "pandas>=2.3.0",
    "plotly>=6.3.1",
    "pyarrow>=21.0.0",
    "pycountry>=24.6.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "statsmodels>=0.14.5",
    "tensorflow-macos>=2.16.2",
    "tensorflow-metal>=1.2.0",
    "xgboost>=3.1.1",
    "yfinance>=0.2.66",
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
required-version = ">=0.4.0"
